--- a/Content/mockup.tex
+++ b/Content/mockup.tex
@@ -1,78 +1,60 @@
 \subsubsection{Trang đăng nhập}
 \begin{figure}[H]
     \centering
-    \includegraphics[width=0.7\linewidth]{Image/login.png}
+    \includegraphics[width=0.7\linewidth]{Image/mk_home.png}
     \caption{Trang login của hệ thống}
     \label{fig:placeholder}
 \end{figure}
 
 \begin{figure}[H]
     \centering
-    \includegraphics[width=0.7\linewidth]{Image/loginsso.png}
+    \includegraphics[width=0.7\linewidth]{Image/mk_sso.png}
     \caption{Sau khi ấn đăng nhập hệ thống chuyển sang HCMUT\_SSO}
     \label{fig:placeholder}
 \end{figure}
+
 \subsubsection{Quên mật khẩu}
 \begin{figure}[H]
     \centering
-    \includegraphics[width=0.7\linewidth]{Image/forgotpass.png}
+    \includegraphics[width=0.7\linewidth]{Image/mk_for.png}
     \caption{Trang quên mật khẩu}
     \label{fig:placeholder}
 \end{figure}
-\begin{figure}[H]
-    \centering
-    \includegraphics[width=0.7\linewidth]{Image/newpass.png}
-    \caption{Cập nhật mật khẩu mới}
-    \label{fig:placeholder}
-\end{figure}
+
+
 \subsubsection{Đăng ký tutor}
 Sau khi đăng nhập sinh viên phải đăng ký Tutor
 \begin{figure}[H]
     \centering
-    \includegraphics[width=0.7\linewidth]{Image/đăng ký tutor.png}
+    \includegraphics[width=0.7\linewidth]{Image/mk_student_dktutor1.png}
     \caption{Bước 1: Nhập thông tin}
     \label{fig:placeholder}
 \end{figure}
 \begin{figure}[H]
     \centering
-    \includegraphics[width=0.7\linewidth]{Image/buoc2.png}
+    \includegraphics[width=0.7\linewidth]{Image/mk_student_dktutor2.png}
     \caption{Bước 2: Chọn Tutor}
     \label{fig:placeholder}
 \end{figure}
 \begin{figure}[H]
     \centering
-    \includegraphics[width=0.7\linewidth]{Image/buoc3.png}
+    \includegraphics[width=0.7\linewidth]{Image/mk_student_dktutor3.png}
     \caption{Bước 3: Chờ xác nhận}
     \label{fig:placeholder}
 \end{figure}
 
-\subsubsection{Trang chủ hệ thống của sinh viên}
+\subsubsection{Sinh viên}
 \begin{figure}[H]
     \centering
-    \includegraphics[width=0.7\linewidth]{Image/trangchu.png}
+    \includegraphics[width=0.7\linewidth]{Image/mk_student_home.png}
     \caption{Trang chủ hệ thống của sinh viên}
     \label{fig:placeholder}
 \end{figure}
 
-\begin{figure}[H]
-    \centering
-    \includegraphics[width=1\linewidth]{Image/huydk.png}
-    \caption{Sinh viên có thể hủy đăng ký tutor trong vòng 12 giờ sau khi đăng ký}
-    \label{fig:placeholder}
-\end{figure}
 
 \begin{figure}[H]
     \centering
-    \includegraphics[width=0.7\linewidth]{Image/thanhcong.png}
-    \caption{Hệ thống báo đăng ký thành công}
-    \label{fig:placeholder}
-\end{figure}
-
-
-\subsubsection{Sinh viên}
-\begin{figure}[H]
-    \centering
-    \includegraphics[width=0.7\linewidth]{Image/profile.png}
+    \includegraphics[width=0.7\linewidth]{Image/mk_student_hoso.png}
     \caption{Xem thông tin cá nhân}
     \label{fig:placeholder}
 \end{figure}
@@ -80,7 +62,7 @@ Sau khi đăng nhập sinh viên phải đăng ký Tutor
 
 \begin{figure}[H]
     \centering
-    \includegraphics[width=0.7\linewidth]{Image/datlich1.png}
+    \includegraphics[width=0.7\linewidth]{Image/mk_student_booking.png}
     \caption{Đặt lịch hẹn với Tutor}
     \label{fig:placeholder}
 \end{figure}
@@ -90,36 +72,39 @@ Sau khi đăng nhập sinh viên phải đăng ký Tutor
 
 \begin{figure}[H]
     \centering
-    \includegraphics[width=0.7\linewidth]{Image/dktuvan.png}
+    \includegraphics[width=0.7\linewidth]{Image/mk_student_dkbuoituvan.png}
     \caption{Đăng ký buổi tư vấn}
     \label{fig:placeholder}
 \end{figure}
 
-
-
-\begin{figure}[htbp]
-  \centering
-  \begin{minipage}{0.48\linewidth}
-    \includegraphics[width=\linewidth]{Image/huy.png}\\[0.25em]
-    \centering (a)
-  \end{minipage}\hfill
-  \begin{minipage}{0.48\linewidth}
-    \includegraphics[width=\linewidth]{Image/huy1}\\[0.25em]
-    \centering (b)
-  \end{minipage}
-
-  \caption{Hủy buổi gặp mặt.}
-  \label{fig:tutor-reg-pair}
-\end{figure}
 \begin{figure}[H]
     \centering
-    \includegraphics[width=0.7\linewidth]{Image/danh sach.png}
+    \includegraphics[width=0.7\linewidth]{Image/mk_tutor_ds.png}
+    \caption{Danh sách buổi tư vấn}
+    \label{fig:placeholder}
+\end{figure}
+
+
+\begin{figure}[H]
+    \centering
+    \includegraphics[width=0.7\linewidth]{Image/mk_huy.png}
+    \caption{Hủy buổi gặp mặt}
+    \label{fig:placeholder}
+\end{figure}
+
+
+
+
+\begin{figure}[H]
+    \centering
+    \includegraphics[width=0.7\linewidth]{Image/mk_student_tailieu.png}
     \caption{Danh sách tài liệu}
     \label{fig:placeholder}
 \end{figure}
+
 \begin{figure}[H]
     \centering
-    \includegraphics[width=0.7\linewidth]{Image/image.png}
+    \includegraphics[width=0.7\linewidth]{Image/mk_student_phanhoi.png}
     \caption{Phản hồi chất lượng}
     \label{fig:placeholder}
 \end{figure}
@@ -129,7 +114,7 @@ Sau khi đăng nhập sinh viên phải đăng ký Tutor
 
 \begin{figure}[H]
     \centering
-    \includegraphics[width=0.7\linewidth]{Image/hstutor.jpg}
+    \includegraphics[width=0.7\linewidth]{Image/mk_tutor_hoso.png}
     \caption{Hồ sơ cá nhân của tutor}
     \label{fig:placeholder}
 \end{figure}
@@ -138,142 +123,78 @@ Sau khi đăng nhập sinh viên phải đăng ký Tutor
 
 \begin{figure}[H]
     \centering
-    \includegraphics[width=0.7\linewidth]{Image/tbtv.jpg}
+    \includegraphics[width=0.7\linewidth]{Image/mk_tutor_tao.png}
     \caption{Tạo buổi tư vấn}
+    \label{fig:placeholder}
+\end{figure}
+
+\begin{figure}[H]
+    \centering
+    \includegraphics[width=0.7\linewidth]{Image/mk_tutor_ds.png}
+    \caption{Danh sách buổi gặp mặt}
     \label{fig:placeholder}
 \end{figure}
 
 
 \begin{figure}[H]
     \centering
-    \includegraphics[width=0.7\linewidth]{Image/lshd.jpg}
-    \caption{Lịch sử hoạt động}
+    \includegraphics[width=0.7\linewidth]{Image/mk_t_huy.png}
+    \caption{Hủy buổi gặp mặt}
+    \label{fig:placeholder}
+\end{figure}
+
+\begin{figure}[H]
+    \centering
+    \includegraphics[width=0.7\linewidth]{Image/mk_tutor_lichranh.png}
+    \caption{Thiết lập lịch rảnh}
     \label{fig:placeholder}
 \end{figure}
 
 
-\begin{figure}[htbp]
-  \centering
-  \begin{minipage}{0.48\linewidth}
-    \includegraphics[width=\linewidth]{Image/hbgm1.jpg}\\[0.25em]
-    \centering (a)
-  \end{minipage}\hfill
-  \begin{minipage}{0.48\linewidth}
-    \includegraphics[width=\linewidth]{Image/hbgm2.jpg}\\[0.25em]
-    \centering (b)
-  \end{minipage}
+\begin{figure}[H]
+    \centering
+    \includegraphics[width=0.7\linewidth]{Image/mk_tutor_dssv.png}
+    \caption{Danh sách sinh viên}
+    \label{fig:placeholder}
+\end{figure}
 
-  \caption{Hủy buổi gặp mặt.}
-  \label{fig:tutor-reg-pair}
+\begin{figure}[H]
+    \centering
+    \includegraphics[width=0.7\linewidth]{Image/mk_tiendo.png}
+    \caption{Ghi nhân tiến độ sinh viên}
+    \label{fig:placeholder}
 \end{figure}
 
 
-
-
-\begin{figure}[htbp]
-  \centering
-  \begin{minipage}{0.48\linewidth}
-    \includegraphics[width=\linewidth]{Image/lr1.jpg}\\[0.25em]
-    \centering (a)
-  \end{minipage}\hfill
-  \begin{minipage}{0.48\linewidth}
-    \includegraphics[width=\linewidth]{Image/lr2.jpg}\\[0.25em]
-    \centering (b)
-  \end{minipage}
-
-  \caption{Thiết lập lịch rảnh.}
-  \label{fig:tutor-reg-pair}
+\begin{figure}[H]
+    \centering
+    \includegraphics[width=0.7\linewidth]{Image/mk_tutor_xuli.png}
+    \caption{Danh sách buổi hẹn do sinh viên yêu cầu}
+    \label{fig:placeholder}
 \end{figure}
 
 
-
-
-
-\begin{figure}[htbp]
-  \centering
-  \begin{minipage}{0.5\linewidth}
-    \includegraphics[width=\linewidth]{Image/gn1.jpg}\\[0.25em]
-    \centering (a)
-  \end{minipage}\hfill
-  \begin{minipage}{0.5\linewidth}
-    \includegraphics[width=\linewidth]{Image/gn2.jpg}\\[0.25em]
-    \centering (b)
-  \end{minipage}
-
-  \vspace{0.6em}
-
-  \begin{minipage}{0.5\linewidth}
-    \includegraphics[width=\linewidth]{Image/gn3.jpg}\\[0.25em]
-    \centering (c)
-  \end{minipage}\hfill
-  \begin{minipage}{0.5\linewidth}
-    \includegraphics[width=\linewidth]{Image/gn4.jpg}\\[0.25em]
-    \centering (d)
-  \end{minipage}
-
-  \caption{Ghi nhận tiến độ sinh viên.}
-  \label{fig:tutor-reg-cluster}
+\begin{figure}[H]
+    \centering
+    \includegraphics[width=0.7\linewidth]{Image/mk_tutor_xuli2.png.png}
+    \caption{Xử lý yêu cầu đặt lịch hẹn}
+    \label{fig:placeholder}
 \end{figure}
 
-\begin{figure}[htbp]
-  \centering
-  % Hàng 1: 2 ảnh
-  \begin{minipage}{0.48\linewidth}
-    \includegraphics[width=\linewidth]{Image/ycdlh1.jpg}\\[0.25em]
-    \centering (a)
-  \end{minipage}\hfill
-  \begin{minipage}{0.48\linewidth}
-    \includegraphics[width=\linewidth]{Image/ycdhl2.jpg}\\[0.25em]
-    \centering (b)
-  \end{minipage}
-
-  \vspace{0.6em}
-
-  % Hàng 2: 1 ảnh, canh giữa
-  \begin{minipage}{0.6\linewidth}
-    \includegraphics[width=\linewidth]{Image/ycdhl3.jpg}\\[0.25em]
-    \centering (c)
-  \end{minipage}
-
-  \caption{Xử lý yêu cầu đặt lịch hẹn.}
-  \label{fig:tutor-reg-cluster}
+\begin{figure}[H]
+    \centering
+    \includegraphics[width=0.7\linewidth]{Image/mk_tutor_tailieu2.png}
+    \caption{Đăng tải tài liệu}
+    \label{fig:placeholder}
 \end{figure}
 
 
-\begin{figure}[htbp]
-  \centering
-  \begin{minipage}{0.48\linewidth}
-    \includegraphics[width=\linewidth]{Image/dttl1.jpg}\\[0.25em]
-    \centering (a)
-  \end{minipage}\hfill
-  \begin{minipage}{0.48\linewidth}
-    \includegraphics[width=\linewidth]{Image/dttl2.jpg}\\[0.25em]
-    \centering (b)
-  \end{minipage}
-
-  \caption{Đăng tải tài liệu.}
-  \label{fig:tutor-reg-pair}
+\begin{figure}[H]
+    \centering
+    \includegraphics[width=0.7\linewidth]{Image/mk_tutor_tailieu.png}
+    \caption{Danh sách tài liệu}
+    \label{fig:placeholder}
 \end{figure}
-
-
-
-
-
-\begin{figure}[htbp]
-  \centering
-  \begin{minipage}{0.48\linewidth}
-    \includegraphics[width=\linewidth]{Image/xtl1.jpg}\\[0.25em]
-    \centering (a)
-  \end{minipage}\hfill
-  \begin{minipage}{0.48\linewidth}
-    \includegraphics[width=\linewidth]{Image/xtl2.jpg}\\[0.25em]
-    \centering (b)
-  \end{minipage}
-
-  \caption{Xóa tài liệu.}
-  \label{fig:tutor-reg-pair}
-\end{figure}
-
 
 
 
@@ -283,33 +204,17 @@ Sau khi đăng nhập sinh viên phải đăng ký Tutor
 
 \begin{figure}[H]
     \centering
-    \includegraphics[width=0.7\linewidth]{Image/gd_coor.jpg}
-    \caption{Giao diện chính}
+    \includegraphics[width=0.7\linewidth]{Image/mk_coor1_.png}
+    \caption{Quản lý khung chương trình chung cho các Tutor}
     \label{fig:placeholder}
 \end{figure}
 
 
 
-\begin{figure}[htbp]
-  \centering
-  % Hàng 1: 2 ảnh
-  \begin{minipage}{0.48\linewidth}
-    \includegraphics[width=\linewidth]{Image/qlkct1.jpg}\\[0.25em]
-    \centering (a)
-  \end{minipage}\hfill
-  \begin{minipage}{0.48\linewidth}
-    \includegraphics[width=\linewidth]{Image/qlkct2.jpg}\\[0.25em]
-    \centering (b)
-  \end{minipage}
-
-  \vspace{0.6em}
-
-  % Hàng 2: 1 ảnh (canh giữa)
-  \begin{minipage}{0.6\linewidth}
-    \includegraphics[width=\linewidth]{Image/qlkct3.jpg}\\[0.25em]
-    \centering (c)
-  \end{minipage}
-
-  \caption{Quản lý khung chương trình chung cho các Tutor.}
-  \label{fig:tutor-reg-cluster}
+\begin{figure}[H]
+    \centering
+    \includegraphics[width=0.7\linewidth]{Image/mk_coor.png}
+    \caption{Quản lý khung chương trình chung cho các Tutor}
+    \label{fig:placeholder}
 \end{figure}
+
