add xu ly lich hen vao main.tex

--- a/main.tex
+++ b/main.tex
@@ -409,6 +409,8 @@ Xem rõ hơn \href{https://drive.google.com/file/d/1OBO3KzPEBzUu60808emp18U4jJLK
 \subsubsection{Hủy buổi gặp mặt}
 \input{Content/diagram_HuyBuoiGap}
 
+\subsubsection{Xử lý lịch hẹn}
+\input{Content/diagram_xulylichhen}
 
 \subsubsection{Tạo buổi tư vấn}
 \input{Content/diagram_TaoBuoiTuVan}
