--- a/Content/classdiagram.tex
+++ b/Content/classdiagram.tex
@@ -673,6 +673,7 @@ Gửi báo cáo tự động theo kỳ (ví dụ tháng/quý) đến phòng ban 
     
     \item viewAppointmentDetails(appointmentId: Long): Appointment\\
     Lấy thông tin chi tiết của một cuộc hẹn (Appointment). Nếu ID không tồn tại hoặc Meeting không phải là Appointment thì trả về null.
+\end{itemize}
 \textbf{FreeSlotService}
 \begin{itemize}
     \item \textbf{getDailySchedule(tutorId: Long, date: LocalDate): FreeSlotResponse} \\
