--- a/Content/hienthuc.tex
+++ b/Content/hienthuc.tex
@@ -44,3 +44,6 @@ và tách biệt frontend--backend rõ ràng.
     \item Khá phụ thuộc vào các thư viện bên ngoài; dễ gây lỗi giao diện nếu thiếu thống nhất trong việc thiết kế từng thành phần.
     \item Khó khăn cho người mới bắt đầu.
 \end{itemize}
+
+
+Link hiện thực của dự án \href{https://github.com/ThuyHien2506/HAPPY_TUTORING_SYSTEM}{tại đây}.
