--- a/Content/mockup.tex
+++ b/Content/mockup.tex
@@ -176,7 +176,7 @@ Sau khi đăng nhập sinh viên phải đăng ký Tutor
 
 \begin{figure}[H]
     \centering
-    \includegraphics[width=0.7\linewidth]{Image/mk_tutor_xuli2.png.png}
+    \includegraphics[width=0.7\linewidth]{Image/mk_tutor_xuli2.png}
     \caption{Xử lý yêu cầu đặt lịch hẹn}
     \label{fig:placeholder}
 \end{figure}
