--- a/Content/uc_SV.tex
+++ b/Content/uc_SV.tex
@@ -149,7 +149,7 @@
 9. Hệ thống gửi thông báo “Hủy thành công”. \\ \hline
 \textbf{Alternative flow} & 
 2a. Không có buổi gặp mặt đã đăng ký. Hệ thống hiển thị “Không có buổi gặp mặt nào”. \newline
-6a. Sinh viên hủy thao tác hủy. Hệ thống quay lại danh sách buổi gặp mặt. \newline
+6a. Sinh viên hủy thao tác hủy. Hệ thống quay lại danh sách buổi gặp mặt. \\ \hline % <--- ĐÃ SỬA: Thêm xuống dòng ở đây
 \textbf{Exception flow} & 
 - Lỗi hệ thống hoặc mất kết nối. Hệ thống hiển thị “Không thể hủy, vui lòng thử lại sau”. \\ \hline
 \end{longtable}
