--- a/main.tex
+++ b/main.tex
@@ -338,10 +338,10 @@ Hoàng Thị Hằng      & 2310901 \\
 \end{table}
 
 
-\subsubsection{Use-case chi toàn bộ hệ thống}
+\subsubsection{Use-case ch0 toàn bộ hệ thống}
 \begin{figure}[H]
     \centering
-    \includegraphics[width=1\linewidth]{Image/SE#1drawio.png}
+    \includegraphics[width=1\linewidth]{Image/s.png}
     \caption{Use-case cho toàn bộ hệ thống}
     \label{fig:placeholder}
 \end{figure}
@@ -454,6 +454,10 @@ Xem rõ hơn \href{https://drive.google.com/file/d/1OBO3KzPEBzUu60808emp18U4jJLK
 
 \subsection{Luồng hoạt động của hệ thống}
 \input{Content/hoatdong.tex}
+
+\subsection{Về việc sử dụng AI}
+
+\input{Content/AI.tex}
 
 
 \end{document}
